# cci-os-worker

./: README.md  pyproject.toml  requirements_fix.txt
.github/workflows/: test.yml
cci_os_worker/: all_facets.py  cmdline.py  deleter.py  directory.py  errors.py  facet_scan.py  fbi_update.py  log_status.py  path_tools.py  run_all.py  tag_scan.py  utils.py
cci_os_worker/collection_regen/: delete_index.py  diff_indices.py  generate_collections.py  update_alias.py
cci_os_worker/filehandlers/: generic_file.py  netcdf_file.py
cci_os_worker/netcdf_handler/: __init__.py  generic_file.py  netcdf_file.py
cci_os_worker/tests/: test_consistency.py
release_notes/: release_v0.4.1.md  release_v0.4.2.md  release_v0.4.md  release_v0.5.md  release_v0.6.md  release_v0.7.md
templates/: complete_conf.yaml  conf.yaml
