[tool.poetry]
name = "cci-os-worker"
version = "0.1.2"
description = "Worker repo to execute the steps for CCI Opensearch Ingestion, namely facet and tag scanning and updates to the CEDA FBI"
authors = ["Daniel Westwood <daniel.westwood@stfc.ac.uk>"]
license = "\"{file = 'LICENSE'}\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
elasticsearch = "^7"
ceda-fbs = { git = 'https://github.com/cedadev/ceda-fbs-cci.git', tag = 'v0.2.1b' }
facet-scanner = { git = 'https://github.com/cedadev/facet-scanner.git', tag = "v0.1.4" }
fbi-directory-check = { git = 'https://github.com/cedadev/fbi-directory-check.git', rev = 'b727446' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
facetscan = "cci_os_worker.facet_scan:facet_main"
fbi_update = "cci_os_worker.fbi_update:fbi_main"
cci_os_update = "cci_os_worker.run_all:main"