[tool.poetry]
name = "cci-os-worker"
version = "0.3.3"
description = "Worker repo to execute the steps for CCI Opensearch Ingestion, namely facet and tag scanning and updates to the CEDA FBI"
authors = ["Daniel Westwood <daniel.westwood@stfc.ac.uk>"]
license = "\"{file = 'LICENSE'}\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
elasticsearch = "^7"
facet-scanner = { git = 'https://github.com/cedadev/facet-scanner.git', tag = "v0.1.7" }
fbi-directory-check = { git = 'https://github.com/cedadev/fbi-directory-check.git', tag="v0.2.3" }

aiofiles = "^24.1.0"
python-magic = "0.4.22"
python-dateutil = "^2.9.0.post0"
ldap3 = "2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
facetscan = "cci_os_worker.facet_scan:facet_main"
fbi_update = "cci_os_worker.fbi_update:fbi_main"
cci_os_update = "cci_os_worker.run_all:main"