[project]
name = "cci-os-worker"
version = "0.9.6"
description = "Worker repo to execute the steps for CCI Opensearch Ingestion, namely facet and tag scanning and updates to the CEDA FBI"
authors = [
    { name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"}
]
license = "BSD 3 - See License file"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12,<4"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "elasticsearch (>=8, <9)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-magic (>=0.4.22,<0.5.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "ldap3 (>=2.9,<3.0)",
    "cci-facet-scanner (>=0.8.4,<0.9.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "pyasn1 (>=0.6.3,<0.7.0)",
    "sparqlwrapper (>=2,<3)",
    "attrs (>=24.2,<25.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cci_os_update = "cci_os_worker.all_facets:main"
cci_delete = "cci_os_worker.deleter:main"

# Originally from opensearch collection regen
delete_index = "cci_os_worker.collection_regen.delete_index:main"
diff_indices = "cci_os_worker.collection_regen.diff_indices:main"
generate_collections = "cci_os_worker.collection_regen.generate_collections:main"
update_alias = "cci_os_worker.collection_regen.update_alias:main"


# Originally from FBI Directory Check
rescan_dir = "cci_os_worker.directory:rescan_directory"
[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

